==> MBronsom/OfflineSWD/STM32-OffineSWD/RL/USB/Drivers/usbd_LPC134x.c <==
#include <RTL.h>
#include <rl_usb.h>
#include "usbreg.h"
#include <LPC13xx.H>
#define __NO_USB_LIB_C
#include "usb_config.c"
#define USB_LPC13XX_FIQ        0
#define USB_LPC13XX_FIQ_VAL    0
#define EP_MSK_CTRL 0x0001      /* Control Endpoint Logical Address Mask      */
#define EP_MSK_BULK 0x000E      /* Bulk Endpoint Logical Address Mask         */
#define EP_MSK_INT  0x000E      /* Interrupt Endpoint Logical Address Mask    */
#define EP_MSK_ISO  0x0010      /* Isochronous Endpoint Logical Address Mask  */
#define USBD_Int_Active  (USBD_FIQ_Active | USBD_IRQ_Active)

void __SVC_1            (int ena) {
  if (ena) {
#if USB_LPC13XX_FIQ
    NVIC_EnableIRQ(USB_FIQn);           /* enable USB HighPriority interrupt  */
#endif
    NVIC_EnableIRQ(USB_IRQn);           /* enable USB interrupt               */
  } else {
#if USB_LPC13XX_FIQ
    NVIC_DisableIRQ(USB_FIQn);          /* disable USB HighPriority interrupt */
#endif
    NVIC_DisableIRQ(USB_IRQn);          /* disable USB interrupt              */
  }
}

void USBD_Init (void) {

#ifdef __RTX
  os_mut_init(&USBD_HW_Mutex);
#endif

  /* Enable AHB clock for USB_REG. and AHB clock for IO configuration block.  */
  LPC_SYSCON->SYSAHBCLKCTRL |= ((1<<14) | (1<<16)  );
                                            
  /* D+, D- needs not to be configured                                        */
  LPC_IOCON->PIO0_3  &= ~0x07;          /* P0.3 VBUS                          */
  LPC_IOCON->PIO0_3  |=  0x01;          /* Select function USB_VBUS           */
  LPC_IOCON->PIO0_6  &= ~0x07;          /* P0.6 SoftConnect                   */
  LPC_IOCON->PIO0_6  |=  0x01;          /* Selects function USB_CONNECT       */

#if USB_LPC13XX_FIQ
  /* only BULK EP3 and FRAME(ISO) can be 
     routed to FIQ but not all at the same time.                              */
  LPC_USB->DevFIQSel = USB_LPC13XX_FIQ_VAL;
#endif 

#ifdef __RTX
  USBD_Intr(1);                         /* enable USB interrupt               */
#else

#if USB_LPC13XX_FIQ
  NVIC_EnableIRQ(USB_FIQn);             /* enable USB HighPriority interrupt  */
#endif

  NVIC_EnableIRQ(USB_IRQn);             /* enable USB interrupt               */
#endif

#if 1 /* Partial Manual Reset since Automatic Bus Reset is not working        */
  USBD_Reset();
  USBD_SetAddress(0, 0);
#endif
}

void USBD_Connect (BOOL con) {
  WrCmdDat(CMD_SET_DEV_STAT, DAT_WR_BYTE(con ? DEV_CON : 0));
}

void USBD_Reset (void) {

  LPC_USB->DevIntClr = 0xFFFFFFFF;
  LPC_USB->DevIntEn  = (0xFF << 1)  |   /* enable EP0..7        interrupt     */
                       DEV_STAT_INT |   /* enable device status interrupt     */
#ifdef __RTX
              ((USBD_RTX_DevTask   != 0) ? FRAME_INT : 0);   /* SOF event     */
#else
              ((USBD_P_SOF_Event   != 0) ? FRAME_INT : 0);   /* SOF event     */
#endif

}

void USBD_WakeUp (void) {

  if (USBD_DeviceStatus & USB_GETSTATUS_REMOTE_WAKEUP) {
    WrCmdDat(CMD_SET_DEV_STAT, DAT_WR_BYTE(DEV_CON));
  }
}

void USBD_SetAddress (U32 adr, U32 setup) {
  if (setup) return;
  WrCmdDat(CMD_SET_ADDR, DAT_WR_BYTE(DEV_EN | adr));  /* Don't wait for next  */
  WrCmdDat(CMD_SET_ADDR, DAT_WR_BYTE(DEV_EN | adr));  /*  Setup Status Phase  */
}

void USBD_EnableEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(0));
}

void USBD_DisableEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(EP_STAT_DA));
}

void USBD_ResetEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(0));
}

void USBD_SetStallEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(EP_STAT_ST));
}

void USBD_ClrStallEP (U32 EPNum) {
  WrCmdDat(CMD_SET_EP_STAT(EPAdr(EPNum)), DAT_WR_BYTE(0));
}

U32 USBD_ReadEP (U32 EPNum, U8 *pData) {
  U32 cnt, n;

#ifdef __RTX
  os_mut_wait(&USBD_HW_Mutex, 0xFFFF);
#endif

  LPC_USB->Ctrl = ((EPNum & 0x0F) << 2) | CTRL_RD_EN;
  for (n = 0; n < 3; n++) __nop();      /* 3 clock cycles to fetch 
                                           the packet length from RAM.        */

  do {
    cnt = LPC_USB->RxPLen;
  } while ((cnt & PKT_DV) == 0);
  cnt &= PKT_LNGTH_MASK;

  for (n = 0; n < (cnt + 3) / 4; n++) {
    *((__packed U32 *)pData) = LPC_USB->RxData;
    pData += 4;
  }

  LPC_USB->Ctrl = 0;

  if (((EP_MSK_ISO >> (EPNum & 0x0F)) & 1) == 0) {   /* Non-Isochronous EP    */
    WrCmdEP(EPNum, CMD_CLR_BUF);
  }

#ifdef __RTX
  os_mut_release(&USBD_HW_Mutex);
#endif

  return (cnt);
}

U32 USBD_WriteEP (U32 EPNum, U8 *pData, U32 cnt) {
  U32 n;

#ifdef __RTX
  os_mut_wait(&USBD_HW_Mutex, 0xFFFF);
#endif

  LPC_USB->Ctrl = ((EPNum & 0x0F) << 2) | CTRL_WR_EN;
  for (n = 0; n < 3; n++) __nop();      /* 3 clock cycles to fetch 
                                           the packet length from RAM.        */
  LPC_USB->TxPLen = cnt;

  for (n = 0; n < (cnt + 3) / 4; n++) {
    LPC_USB->TxData = *((__packed U32 *)pData);
    pData += 4;
  }
  
  if (n == 0) LPC_USB->TxData = 0;      /* Dummy write to send ZLP            */ 

  LPC_USB->Ctrl = 0;

  WrCmdEP(EPNum, CMD_VALID_BUF);

#ifdef __RTX
  os_mut_release(&USBD_HW_Mutex);
#endif

  return (cnt);
}

U32 USBD_GetFrame (void) {
  U32 val;

  WrCmd(CMD_RD_FRAME);
  val = RdCmdDat(DAT_RD_FRAME);
  val = val | (RdCmdDat(DAT_RD_FRAME) << 8);

  return (val);
}
